# week02_miniproj_ds655

./: README.html  README.md
my_lambda_function/: Cargo.toml  Dockerfile  bootstrap  output.txt  outputfile.txt
my_lambda_function/src/: main.rs
